--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <p class="recommend__count">
                   Lucy and 3 other friend recommend this hotel
                 </p>
-                <div class="recommend-friends">
+                <div class="recommend__friends">
                   <img
                     src="img/user-3.jpg"
                     alt="Friend 1"
